--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,9 @@
     <string name="username_login_pass_hint">请输入密码</string>
     <string name="user_login">登陆</string>
 
+    <string name="dialog_default_title">Hello message!</string>
+    <string name="dialog_ok">确定</string>
+    <string name="dialog_cancel">取消</string>
+    <string name="LOADING">加载中...</string>
+
 </resources>
